--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,17 +17,20 @@
     "@acme/db": "*",
     "@acme/tailwind-config": "*",
     "@hookform/resolvers": "^3.1.0",
+    "@react-three/fiber": "^8.13.3",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@types/three": "^0.152.1",
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "superjson": "1.9.1",
+    "three": "^0.153.0",
     "victory": "^36.6.10",
     "zod": "^3.21.4"
   },
