--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,6 +17,9 @@
     "@acme/db": "*",
     "@acme/tailwind-config": "*",
     "@hookform/resolvers": "^3.1.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.7",
     "@react-three/drei": "^9.77.0",
     "@react-three/fiber": "^8.13.3",
     "@tanstack/react-query": "^4.28.0",
